js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/top-level-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
